--- a/CITATION.bib
+++ b/CITATION.bib
@@ -4,6 +4,7 @@
 	author = {Tobias Weber},
 	title = {{Quantum Algorithms Editor (Software)}},
 	doi = {10.5281/zenodo.5653804},
+	url = {https://doi.org/10.5281/zenodo.5653804},
 	year = {2021},
 	publisher = {Zenodo},
 }
