--- a/CITATION.bib
+++ b/CITATION.bib
@@ -5,6 +5,7 @@
 	title = {{Quantum Algorithms Editor (Software)}},
 	doi = {10.5281/zenodo.5653804},
 	url = {https://doi.org/10.5281/zenodo.5653804},
+	OPTurl = {https://github.com/t-weber/qm},
 	year = {2021},
 	publisher = {Zenodo},
 }
